--- a/index.html
+++ b/index.html
@@ -1,230 +1,260 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>ZenSite</title>
 
 <style>
-:root{
-  --bg:#050505;
-  --card:#111;
-  --txt:#fff;
-  --muted:#b5b5b5;
-  --accent:#00ff9c;
+/* ===== RESET ===== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-*{box-sizing:border-box;margin:0;padding:0}
-body{
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
-  background:
-    radial-gradient(900px 500px at 50% 10%,rgba(0,140,255,.25),transparent 60%),
-    radial-gradient(700px 500px at 20% 85%,rgba(0,255,150,.25),transparent 65%),
-    #050505;
-  color:var(--txt);
-  overflow-x:hidden;
+/* ===== BASE ===== */
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  background: #050505;
+  color: #fff;
+  overflow-x: hidden;
 }
 
-/* ===== NAV ===== */
-nav{
-  position:fixed;
-  top:0;left:0;
-  width:100%;
-  padding:18px 6%;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  backdrop-filter:blur(12px);
-  background:rgba(0,0,0,.35);
-  z-index:999;
+/* ===== HEADER ===== */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 18px 6%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(0,0,0,.55);
+  backdrop-filter: blur(14px);
+  z-index: 1000;
 }
-.nav-left a{
-  margin-right:18px;
-  text-decoration:none;
-  color:#fff;
-  font-weight:600;
-  opacity:.8;
+
+.nav-left a {
+  margin-right: 22px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  opacity: .85;
 }
-.nav-left a:hover{opacity:1}
-.nav-right span{
-  cursor:pointer;
-  margin-left:14px;
-  font-weight:900;
-  opacity:.5;
+.nav-left a:hover { opacity: 1; }
+
+.nav-right button {
+  background: none;
+  border: none;
+  color: #fff;
+  font-weight: 800;
+  margin-left: 12px;
+  cursor: pointer;
+  opacity: .6;
 }
-.nav-right span.active{opacity:1}
+.nav-right button.active { opacity: 1; }
 
 /* ===== HERO ===== */
-.hero{
-  min-height:100vh;
-  padding:160px 6% 120px;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  align-items:center;
-  gap:60px;
+.hero {
+  min-height: 100vh;
+  padding: 160px 6% 120px;
+  background:
+    radial-gradient(800px 500px at 50% 0%, rgba(0,120,255,.25), transparent 60%),
+    radial-gradient(700px 500px at 20% 90%, rgba(0,255,150,.18), transparent 60%),
+    #050505;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.hero h1{
-  font-size:clamp(42px,6vw,84px);
-  line-height:1.05;
+
+.hero h1 {
+  font-size: clamp(44px, 6vw, 72px);
+  font-weight: 900;
+  line-height: 1.05;
+  max-width: 820px;
 }
-.hero p{
-  margin-top:22px;
-  font-size:18px;
-  color:var(--muted);
-  max-width:520px;
+
+.hero p {
+  margin-top: 20px;
+  font-size: 18px;
+  max-width: 620px;
+  opacity: .9;
+}
+
+/* ===== CTA ===== */
+.hero-actions {
+  margin-top: 36px;
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+
+.btn-primary {
+  padding: 16px 28px;
+  background: #fff;
+  color: #000;
+  border-radius: 14px;
+  font-weight: 800;
+  text-decoration: none;
+}
+
+.btn-secondary {
+  padding: 16px 28px;
+  border: 1px solid rgba(255,255,255,.4);
+  border-radius: 14px;
+  color: #fff;
+  text-decoration: none;
 }
 
 /* ===== LAPTOP ===== */
-.laptop-wrap{
-  position:relative;
-  display:flex;
-  justify-content:center;
+.laptop-wrap {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
 }
-.laptop{
-  width:100%;
-  max-width:520px;
-  animation:float 6s ease-in-out infinite;
+
+.laptop {
+  width: min(900px, 100%);
+  animation: float 6s ease-in-out infinite;
 }
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-18px)}
+
+.laptop img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* ===== BADGE ===== */
-.badge{
-  position:absolute;
-  bottom:-20px;
-  right:10%;
-  background:linear-gradient(135deg,#00ff9c,#00c4ff);
-  color:#000;
-  padding:14px 22px;
-  border-radius:999px;
-  font-weight:900;
-  box-shadow:0 0 40px rgba(0,255,200,.5);
-  animation:pulse 2.5s infinite;
-}
-@keyframes pulse{
-  0%{transform:scale(1)}
-  50%{transform:scale(1.08)}
-  100%{transform:scale(1)}
+.badge {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 40px;
+  padding: 14px 22px;
+  background: rgba(0,0,0,.7);
+  border: 1px solid rgba(255,255,255,.25);
+  border-radius: 999px;
+  font-weight: 900;
+  animation: pulse 2.2s infinite;
 }
 
 /* ===== SLOGAN ===== */
-.slogan{
-  text-align:center;
-  padding:140px 6% 160px;
+.slogan {
+  padding: 140px 6% 100px;
+  text-align: center;
 }
-.slogan h2{
-  font-size:clamp(40px,6vw,72px);
+
+.slogan h2 {
+  font-size: clamp(38px, 5vw, 56px);
+  font-weight: 900;
 }
-.slogan p{
-  margin-top:18px;
-  font-size:18px;
-  color:var(--muted);
+
+.slogan p {
+  margin-top: 16px;
+  opacity: .85;
 }
 
 /* ===== FOOTER ===== */
-footer{
-  padding:40px 6%;
-  text-align:center;
-  opacity:.6;
-  font-size:14px;
+footer {
+  padding: 40px 6%;
+  text-align: center;
+  opacity: .6;
+  font-size: 14px;
 }
 
-/* ===== WHATSAPP ===== */
-.whatsapp{
-  position:fixed;
-  right:20px;
-  bottom:20px;
-  width:58px;
-  height:58px;
-  background:#25d366;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:28px;
-  color:#fff;
-  text-decoration:none;
-  box-shadow:0 0 30px rgba(37,211,102,.7);
-  z-index:999;
+/* ===== ANIMATIONS ===== */
+@keyframes float {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-18px); }
+}
+@keyframes pulse {
+  0%,100% { transform: translateX(-50%) scale(1); }
+  50% { transform: translateX(-50%) scale(1.05); }
 }
 
 /* ===== MOBILE ===== */
-@media(max-width:900px){
-  .hero{
-    grid-template-columns:1fr;
-    text-align:center;
-  }
-  .hero p{margin-inline:auto}
-  .badge{right:50%;transform:translateX(50%)}
+@media (max-width: 768px) {
+  .hero { padding-top: 140px; }
+  .hero-actions { flex-direction: column; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- NAV -->
-<nav>
+<header>
   <div class="nav-left">
-    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
-    <a href="demo.html" data-es="Demo" data-en="Demo">Demo</a>
-    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
-    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demo</a>
+    <a href="planes.html">Planes</a>
+    <a href="nosotros.html">Nosotros</a>
   </div>
   <div class="nav-right">
-    <span class="active" data-lang="es">ES</span>
-    <span data-lang="en">EN</span>
+    <button class="active" data-lang="es">ES</button>
+    <button data-lang="en">EN</button>
   </div>
-</nav>
+</header>
 
-<!-- HERO -->
 <section class="hero">
-  <div>
-    <h1 data-es="ZenSite lleva tu negocio al siguiente nivel"
-        data-en="ZenSite takes your business to the next level">
-      ZenSite lleva tu negocio al siguiente nivel
-    </h1>
-    <p data-es="Tu web es tu primera impresión. Haz que cuente desde el primer segundo."
-       data-en="Your website is your first impression. Make it count from the first second.">
-      Tu web es tu primera impresión. Haz que cuente desde el primer segundo.
-    </p>
+  <h1 data-es="Lleva tu negocio al siguiente nivel"
+      data-en="Take your business to the next level">
+      Lleva tu negocio al siguiente nivel
+  </h1>
+
+  <p data-es="Diseñamos webs modernas, rápidas y pensadas para convertir. No es solo diseño, es presencia digital real."
+     data-en="We design modern, fast websites built to convert. Not just design, real digital presence.">
+     Diseñamos webs modernas, rápidas y pensadas para convertir. No es solo diseño, es presencia digital real.
+  </p>
+
+  <div class="hero-actions">
+    <a href="planes.html" class="btn-primary">Ver planes</a>
+    <a href="https://wa.me/15027942412" target="_blank" class="btn-secondary">Hablar por WhatsApp</a>
   </div>
 
   <div class="laptop-wrap">
-    <img src="background.jpg" alt="ZenSite demo" class="laptop">
-    <div class="badge">⚡ 15% OFF</div>
+    <div class="laptop">
+      <img src="background.jpg" alt="ZenSite Demo" />
+    </div>
+  </div>
+
+  <div class="badge" id="promoBadge">
+    ⚡ 15% OFF · solo por 30 días
   </div>
 </section>
 
-<!-- SLOGAN -->
 <section class="slogan">
-  <h2 data-es="Diseño que vende. Tecnología real."
-      data-en="Design that sells. Real technology.">
-    Diseño que vende. Tecnología real.
-  </h2>
-  <p data-es="No hacemos webs genéricas. Creamos presencia digital que genera confianza."
-     data-en="We don’t build generic websites. We create digital presence that builds trust.">
-    No hacemos webs genéricas. Creamos presencia digital que genera confianza.
-  </p>
+  <h2>Tu web es tu primera impresión</h2>
+  <p>Haz que cuente desde el primer segundo.</p>
 </section>
 
-<!-- FOOTER -->
 <footer>
   © 2025 ZenSite · Todos los derechos reservados
 </footer>
 
-<!-- WHATSAPP -->
-<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">💬</a>
-
 <script>
-const langBtns=document.querySelectorAll('[data-lang]');
-const texts=document.querySelectorAll('[data-es]');
-function setLang(l){
-  texts.forEach(t=>t.textContent=t.dataset[l]);
-  langBtns.forEach(b=>b.classList.toggle('active',b.dataset.lang===l));
+/* ===== TRADUCCIÓN ===== */
+const buttons = document.querySelectorAll("[data-lang]");
+const texts = document.querySelectorAll("[data-es]");
+
+buttons.forEach(btn => {
+  btn.addEventListener("click", () => {
+    buttons.forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+    const lang = btn.dataset.lang;
+    texts.forEach(t => t.textContent = t.dataset[lang]);
+  });
+});
+
+/* ===== PROMO 30 DÍAS ===== */
+const promoStart = new Date("2025-01-01");
+const promoDays = 30;
+const today = new Date();
+const diffDays = Math.floor((today - promoStart) / (1000*60*60*24));
+if (diffDays > promoDays) {
+  document.getElementById("promoBadge").style.display = "none";
 }
-langBtns.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
 </script>
 
 </body>
