--- a/index.html
+++ b/index.html
@@ -1,183 +1,184 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ZenSite</title>
 
 <style>
 /* ===== RESET ===== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
 
-/* ===== BASE ===== */
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background: #050505;
-  color: #fff;
-  overflow-x: hidden;
+body{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  background:#050505;
+  color:#fff;
+  overflow-x:hidden;
 }
 
 /* ===== HEADER ===== */
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 18px 6%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: rgba(0,0,0,.55);
-  backdrop-filter: blur(14px);
-  z-index: 1000;
+header{
+  position:fixed;
+  top:0;
+  width:100%;
+  padding:18px 6%;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  background:rgba(0,0,0,.45);
+  backdrop-filter:blur(14px);
+  z-index:1000;
 }
 
-.nav-left a {
-  margin-right: 22px;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
-  opacity: .85;
+.logo{
+  font-weight:900;
+  font-size:20px;
+  letter-spacing:1px;
 }
-.nav-left a:hover { opacity: 1; }
 
-.nav-right button {
-  background: none;
-  border: none;
-  color: #fff;
-  font-weight: 800;
-  margin-left: 12px;
-  cursor: pointer;
-  opacity: .6;
+nav a{
+  margin:0 14px;
+  text-decoration:none;
+  color:#fff;
+  font-weight:600;
+  opacity:.85;
 }
-.nav-right button.active { opacity: 1; }
+nav a:hover{opacity:1}
+
+.lang button{
+  background:none;
+  border:none;
+  color:#fff;
+  font-weight:800;
+  margin-left:10px;
+  opacity:.6;
+  cursor:pointer;
+}
+.lang .active{opacity:1}
 
 /* ===== HERO ===== */
-.hero {
-  min-height: 100vh;
-  padding: 160px 6% 120px;
+.hero{
+  min-height:100vh;
+  padding:160px 6% 120px;
   background:
-    radial-gradient(800px 500px at 50% 0%, rgba(0,120,255,.25), transparent 60%),
-    radial-gradient(700px 500px at 20% 90%, rgba(0,255,150,.18), transparent 60%),
+    radial-gradient(900px 500px at 50% 0%, rgba(0,140,255,.18), transparent 65%),
+    radial-gradient(700px 500px at 20% 85%, rgba(0,255,170,.18), transparent 65%),
     #050505;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
-.hero h1 {
-  font-size: clamp(44px, 6vw, 72px);
-  font-weight: 900;
-  line-height: 1.05;
-  max-width: 820px;
+.hero h1{
+  font-size:clamp(44px,8vw,74px);
+  font-weight:900;
+  line-height:1.05;
+  max-width:820px;
 }
 
-.hero p {
-  margin-top: 20px;
-  font-size: 18px;
-  max-width: 620px;
-  opacity: .9;
+.hero h1 span{
+  background:linear-gradient(90deg,#fff,#aaa);
+  -webkit-background-clip:text;
+  color:transparent;
 }
 
-/* ===== CTA ===== */
-.hero-actions {
-  margin-top: 36px;
-  display: flex;
-  gap: 16px;
-  flex-wrap: wrap;
+.hero p{
+  margin-top:26px;
+  max-width:640px;
+  font-size:18px;
+  opacity:.9;
 }
 
-.btn-primary {
-  padding: 16px 28px;
-  background: #fff;
-  color: #000;
-  border-radius: 14px;
-  font-weight: 800;
-  text-decoration: none;
+.cta{
+  margin-top:46px;
 }
 
-.btn-secondary {
-  padding: 16px 28px;
-  border: 1px solid rgba(255,255,255,.4);
-  border-radius: 14px;
-  color: #fff;
-  text-decoration: none;
+.cta a{
+  display:inline-block;
+  padding:18px 46px;
+  border-radius:18px;
+  background:#fff;
+  color:#000;
+  font-weight:900;
+  text-decoration:none;
 }
 
 /* ===== LAPTOP ===== */
-.laptop-wrap {
-  margin-top: 80px;
-  display: flex;
-  justify-content: center;
+.laptop{
+  margin:120px auto 0;
+  max-width:900px;
+  animation:float 6s ease-in-out infinite;
 }
 
-.laptop {
-  width: min(900px, 100%);
-  animation: float 6s ease-in-out infinite;
+.laptop img{
+  width:100%;
+  display:block;
+  filter:drop-shadow(0 40px 120px rgba(0,0,0,.8));
 }
 
-.laptop img {
-  width: 100%;
-  height: auto;
-  display: block;
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-14px)}
 }
 
-/* ===== BADGE ===== */
-.badge {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 40px;
-  padding: 14px 22px;
-  background: rgba(0,0,0,.7);
-  border: 1px solid rgba(255,255,255,.25);
-  border-radius: 999px;
-  font-weight: 900;
-  animation: pulse 2.2s infinite;
+/* ===== 15% OFF ===== */
+.offer{
+  margin:60px auto 0;
+  max-width:360px;
+  text-align:center;
+  padding:18px 26px;
+  border-radius:20px;
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.2);
+  backdrop-filter:blur(14px);
+  animation:pulse 2.8s infinite;
+}
+
+.offer strong{
+  font-size:22px;
+  display:block;
+}
+
+.offer span{
+  font-size:14px;
+  opacity:.85;
+}
+
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.04)}
 }
 
 /* ===== SLOGAN ===== */
-.slogan {
-  padding: 140px 6% 100px;
-  text-align: center;
+.slogan{
+  padding:140px 6% 120px;
+  text-align:center;
 }
 
-.slogan h2 {
-  font-size: clamp(38px, 5vw, 56px);
-  font-weight: 900;
+.slogan h2{
+  font-size:clamp(36px,6vw,56px);
+  font-weight:900;
 }
 
-.slogan p {
-  margin-top: 16px;
-  opacity: .85;
+.slogan p{
+  margin-top:16px;
+  font-size:18px;
+  opacity:.85;
 }
 
 /* ===== FOOTER ===== */
-footer {
-  padding: 40px 6%;
-  text-align: center;
-  opacity: .6;
-  font-size: 14px;
-}
-
-/* ===== ANIMATIONS ===== */
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-18px); }
-}
-@keyframes pulse {
-  0%,100% { transform: translateX(-50%) scale(1); }
-  50% { transform: translateX(-50%) scale(1.05); }
+footer{
+  padding:40px 6%;
+  text-align:center;
+  opacity:.5;
+  font-size:14px;
 }
 
 /* ===== MOBILE ===== */
-@media (max-width: 768px) {
-  .hero { padding-top: 140px; }
-  .hero-actions { flex-direction: column; }
+@media(max-width:768px){
+  nav{display:none}
+  .hero{padding-top:140px}
 }
 </style>
 </head>
@@ -185,42 +186,42 @@ footer {
 <body>
 
 <header>
-  <div class="nav-left">
+  <div class="logo">ZenSite</div>
+
+  <nav>
     <a href="index.html">Inicio</a>
     <a href="demo.html">Demo</a>
-    <a href="planes.html">Planes</a>
     <a href="nosotros.html">Nosotros</a>
-  </div>
-  <div class="nav-right">
-    <button class="active" data-lang="es">ES</button>
-    <button data-lang="en">EN</button>
+  </nav>
+
+  <div class="lang">
+    <button class="active">ES</button>
+    <button>EN</button>
   </div>
 </header>
 
 <section class="hero">
-  <h1 data-es="Lleva tu negocio al siguiente nivel"
-      data-en="Take your business to the next level">
-      Lleva tu negocio al siguiente nivel
+  <h1>
+    Lleva tu negocio<br>
+    <span>al siguiente nivel</span>
   </h1>
 
-  <p data-es="Diseñamos webs modernas, rápidas y pensadas para convertir. No es solo diseño, es presencia digital real."
-     data-en="We design modern, fast websites built to convert. Not just design, real digital presence.">
-     Diseñamos webs modernas, rápidas y pensadas para convertir. No es solo diseño, es presencia digital real.
+  <p>
+    Diseñamos webs modernas, rápidas y pensadas para convertir.
+    <strong>No es solo diseño, es presencia digital real.</strong>
   </p>
 
-  <div class="hero-actions">
-    <a href="planes.html" class="btn-primary">Ver planes</a>
-    <a href="https://wa.me/15027942412" target="_blank" class="btn-secondary">Hablar por WhatsApp</a>
+  <div class="cta">
+    <a href="planes.html">Ver planes</a>
   </div>
 
-  <div class="laptop-wrap">
-    <div class="laptop">
-      <img src="background.jpg" alt="ZenSite Demo" />
-    </div>
+  <div class="laptop">
+    <img src="background.jpg" alt="ZenSite preview">
   </div>
 
-  <div class="badge" id="promoBadge">
-    ⚡ 15% OFF · solo por 30 días
+  <div class="offer">
+    <strong>15% OFF</strong>
+    <span>Solo por 30 días</span>
   </div>
 </section>
 
@@ -230,32 +231,8 @@ footer {
 </section>
 
 <footer>
-  © 2025 ZenSite · Todos los derechos reservados
+  © 2025 ZenSite. Todos los derechos reservados.
 </footer>
-
-<script>
-/* ===== TRADUCCIÓN ===== */
-const buttons = document.querySelectorAll("[data-lang]");
-const texts = document.querySelectorAll("[data-es]");
-
-buttons.forEach(btn => {
-  btn.addEventListener("click", () => {
-    buttons.forEach(b => b.classList.remove("active"));
-    btn.classList.add("active");
-    const lang = btn.dataset.lang;
-    texts.forEach(t => t.textContent = t.dataset[lang]);
-  });
-});
-
-/* ===== PROMO 30 DÍAS ===== */
-const promoStart = new Date("2025-01-01");
-const promoDays = 30;
-const today = new Date();
-const diffDays = Math.floor((today - promoStart) / (1000*60*60*24));
-if (diffDays > promoDays) {
-  document.getElementById("promoBadge").style.display = "none";
-}
-</script>
 
 </body>
 </html>
