--- a/demo.html
+++ b/demo.html
@@ -3,226 +3,212 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Demos</title>
+<title>ZenSite | Demo</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   background:#050505;
   color:#fff;
   overflow-x:hidden;
 }
 
 /* ===== HEADER ===== */
-header{
+.header{
   position:fixed;
-  top:0;left:0;
+  top:0;
+  left:0;
   width:100%;
-  padding:18px 7%;
+  padding:18px 24px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(12px);
-  z-index:1000;
+  background:linear-gradient(to bottom, rgba(0,0,0,.7), transparent);
+  z-index:100;
 }
-header a{
-  color:#fff;
+
+.header-left{
+  display:flex;
+  align-items:center;
+  gap:16px;
+}
+
+.back{
   text-decoration:none;
-  font-weight:700;
-  margin-left:18px;
-  opacity:.85;
+  color:#fff;
+  font-size:22px;
+  opacity:.8;
 }
-header a:hover{opacity:1}
-.logo{font-weight:900;font-size:20px}
+.back:hover{opacity:1}
+
+.header-right{
+  display:flex;
+  gap:14px;
+  font-weight:700;
+}
+
+.lang{
+  cursor:pointer;
+  opacity:.5;
+}
+.lang.active{opacity:1}
 
 /* ===== HERO ===== */
 .hero{
-  min-height:100vh;
-  padding:140px 7% 80px;
+  padding:140px 8% 80px;
   background:
-    radial-gradient(800px 500px at 50% 10%, rgba(0,150,255,.2), transparent 65%),
-    radial-gradient(700px 500px at 80% 85%, rgba(0,255,150,.2), transparent 65%),
+    radial-gradient(700px 400px at 50% 0%, rgba(0,120,255,.25), transparent 65%),
+    radial-gradient(600px 400px at 20% 80%, rgba(0,255,170,.18), transparent 65%),
     #050505;
 }
+
 .hero h1{
-  font-size:clamp(42px,7vw,72px);
+  font-size:clamp(40px,6vw,72px);
   font-weight:900;
+  line-height:1.05;
+  text-shadow:0 10px 40px rgba(0,0,0,.7);
 }
+
 .hero p{
-  margin-top:14px;
-  max-width:600px;
+  margin-top:18px;
+  max-width:680px;
+  font-size:18px;
   opacity:.85;
 }
 
 /* ===== STATS ===== */
 .stats{
-  display:flex;
-  gap:24px;
-  margin-top:60px;
-  flex-wrap:wrap;
-}
-.stat{
-  flex:1;
-  min-width:160px;
-  background:rgba(20,20,20,.7);
-  border:1px solid rgba(255,255,255,.1);
-  border-radius:20px;
-  padding:26px;
-  text-align:center;
-}
-.stat strong{
-  font-size:36px;
-  font-weight:900;
-}
-.stat span{
-  display:block;
-  opacity:.7;
-  margin-top:6px;
+  margin-top:70px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:28px;
 }
 
-/* ===== DEMO SLIDER ===== */
-.demos{
-  padding:120px 0;
-}
-.demos h2{
+.stat{
+  background:rgba(20,20,20,.85);
+  border:1px solid rgba(255,255,255,.1);
+  border-radius:22px;
+  padding:36px 20px;
   text-align:center;
+  backdrop-filter:blur(14px);
+  animation:fadeUp .8s ease both;
+}
+
+.stat strong{
   font-size:42px;
-  margin-bottom:60px;
+  font-weight:900;
 }
-.slider{
-  display:flex;
-  gap:30px;
-  padding:0 7%;
-  overflow-x:auto;
-  scroll-snap-type:x mandatory;
-}
-.slide{
-  min-width:300px;
-  max-width:300px;
-  scroll-snap-align:center;
-  background:rgba(20,20,20,.75);
-  border-radius:24px;
-  overflow:hidden;
-  border:1px solid rgba(255,255,255,.12);
-  transition:.3s;
-}
-.slide:hover{transform:scale(1.05)}
-.slide img{
-  width:100%;
-  height:200px;
-  object-fit:cover;
-}
-.slide div{
-  padding:18px;
-  font-weight:700;
+
+.stat span{
+  display:block;
+  margin-top:6px;
+  opacity:.7;
 }
 
 /* ===== CTA ===== */
 .cta{
-  padding:120px 7%;
+  margin-top:90px;
   text-align:center;
 }
+
 .cta h2{
-  font-size:42px;
-  margin-bottom:20px;
-}
-.cta button{
-  padding:16px 38px;
-  font-size:18px;
-  border-radius:14px;
-  border:none;
+  font-size:clamp(34px,5vw,56px);
   font-weight:900;
-  cursor:pointer;
-  background:#fff;
 }
 
-/* ===== WHATSAPP ===== */
-.whatsapp{
-  position:fixed;
-  bottom:24px;
-  right:24px;
-  width:60px;
-  height:60px;
-  background:#25d366;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:30px;
-  color:#fff;
-  text-decoration:none;
-  z-index:999;
+.cta p{
+  margin-top:14px;
+  opacity:.8;
 }
 
-/* ===== MOBILE ===== */
-@media(max-width:768px){
-  .stats{flex-direction:column}
-  .slider{padding-left:20px}
+/* ===== FOOTER ===== */
+footer{
+  margin-top:120px;
+  padding:30px;
+  text-align:center;
+  font-size:14px;
+  opacity:.5;
+}
+
+/* ===== ANIM ===== */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(40px)}
+  to{opacity:1;transform:translateY(0)}
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <div class="logo">ZenSite</div>
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="demo.html">Demo</a>
-    <a href="planes.html">Planes</a>
-  </nav>
+<!-- HEADER -->
+<header class="header">
+  <div class="header-left">
+    <a href="index.html" class="back">←</a>
+  </div>
+  <div class="header-right">
+    <span class="lang active" data-lang="es">ES</span>
+    <span class="lang" data-lang="en">EN</span>
+  </div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
-  <h1>Demos reales,<br>resultados reales</h1>
-  <p>Ejemplos de proyectos diseñados para convertir, generar confianza y verse profesionales desde el primer segundo.</p>
+  <h1 data-es="Demos reales,<br>resultados reales"
+      data-en="Real demos,<br>real results">
+    Demos reales,<br>resultados reales
+  </h1>
 
+  <p data-es="Ejemplos de proyectos diseñados para convertir, generar confianza y verse profesionales desde el primer segundo."
+     data-en="Examples of projects designed to convert, build trust and look professional from the very first second.">
+    Ejemplos de proyectos diseñados para convertir, generar confianza y verse profesionales desde el primer segundo.
+  </p>
+
+  <!-- STATS -->
   <div class="stats">
-    <div class="stat"><strong id="n1">0</strong><span>Proyectos entregados</span></div>
-    <div class="stat"><strong id="n2">0</strong><span>Países</span></div>
-    <div class="stat"><strong id="n3">0%</strong><span>Satisfacción</span></div>
+    <div class="stat">
+      <strong>15</strong>
+      <span data-es="Proyectos entregados" data-en="Projects delivered">Proyectos entregados</span>
+    </div>
+    <div class="stat">
+      <strong>2</strong>
+      <span data-es="Países" data-en="Countries">Países</span>
+    </div>
+    <div class="stat">
+      <strong>98%</strong>
+      <span data-es="Satisfacción" data-en="Satisfaction">Satisfacción</span>
+    </div>
+  </div>
+
+  <!-- CTA -->
+  <div class="cta">
+    <h2 data-es="¿Listo para ver tu proyecto aquí?"
+        data-en="Ready to see your project here?">
+      ¿Listo para ver tu proyecto aquí?
+    </h2>
+    <p data-es="Tu web es tu primera impresión. Haz que cuente."
+       data-en="Your website is your first impression. Make it count.">
+      Tu web es tu primera impresión. Haz que cuente.
+    </p>
   </div>
 </section>
 
-<section class="demos">
-  <h2>Proyectos demo</h2>
-  <div class="slider">
-    <div class="slide"><img src="demo1.jpg"><div>Landing Page</div></div>
-    <div class="slide"><img src="demo2.jpg"><div>Web Corporativa</div></div>
-    <div class="slide"><img src="demo3.jpg"><div>Marca Personal</div></div>
-    <div class="slide"><img src="demo4.jpg"><div>Tienda Online</div></div>
-    <div class="slide"><img src="demo5.jpg"><div>Ecommerce Premium</div></div>
-  </div>
-</section>
-
-<section class="cta">
-  <h2>¿Listo para ver tu proyecto aquí?</h2>
-  <button onclick="goWhats()">Hablar por WhatsApp</button>
-</section>
-
-<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">🟢</a>
+<footer>
+  © 2025 ZenSite. Todos los derechos reservados.
+</footer>
 
 <script>
-function animate(id,target,suffix=""){
-  let n=0;
-  const el=document.getElementById(id);
-  const i=setInterval(()=>{
-    n++;
-    el.textContent=n+suffix;
-    if(n>=target)clearInterval(i);
-  },30);
-}
-setTimeout(()=>{
-  animate("n1",15);
-  animate("n2",2);
-  animate("n3",98,"%");
-},600);
+const langs=document.querySelectorAll(".lang");
+const texts=document.querySelectorAll("[data-es]");
 
-function goWhats(){
-  window.open("https://wa.me/15027942412?text=Hola,%20quiero%20ver%20demos%20de%20ZenSite","_blank");
-}
+langs.forEach(btn=>{
+  btn.onclick=()=>{
+    langs.forEach(b=>b.classList.remove("active"));
+    btn.classList.add("active");
+    const l=btn.dataset.lang;
+    texts.forEach(t=>t.innerHTML=t.dataset[l]);
+  }
+});
 </script>
 
 </body>
