--- a/planes.html
+++ b/planes.html
@@ -315,6 +315,38 @@ setTimeout(()=>{
   b.style.transform="translateY(0)";
 },4500);
 </script>
+<!-- PAGE TRANSITION -->
+<div id="page-transition"></div>
+
+<style>
+#page-transition{
+  position:fixed;
+  inset:0;
+  background:#050505;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity .35s ease;
+  z-index:9999;
+}
+#page-transition.active{
+  opacity:1;
+}
+</style>
+
+<script>
+document.querySelectorAll("a[href]").forEach(link=>{
+  const url = link.getAttribute("href");
+  if(url && !url.startsWith("#") && !url.startsWith("http")){
+    link.addEventListener("click", e=>{
+      e.preventDefault();
+      const t=document.getElementById("page-transition");
+      t.classList.add("active");
+      setTimeout(()=>window.location.href=url,350);
+    });
+  }
+});
+</script>
 
 </body>
 </html>
+
