--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>ZenSite</title>
 
 <style>
@@ -20,6 +20,9 @@ body{
     #050505;
   color:#fff;
   overflow-x:hidden;
+}
+html, body {
+  touch-action: manipulation;
 }
 
 /* ===== TOP BAR ===== */
@@ -261,4 +264,5 @@ document.querySelectorAll("a[href]").forEach(link=>{
 
 </body>
 </html>
+
 
